--- a/style.scss
+++ b/style.scss
@@ -72,7 +72,7 @@ input::placeholder {
 .spanm {
    @media (max-width: 699px) {
       position: relative;
-      top: -19px;
+      top: -21px;
       left: -35px;
    }
 }
@@ -87,9 +87,10 @@ input::placeholder {
    margin-left: -13px;
 }
 .addPros {
-   width: 15px;
+   width: 19px !important;
+   height: 19px !important;
    border: 1px solid #000;
-   margin-bottom: -5px;
+   margin-bottom: 5px;
    display: inline-block;
 }
 .calc__right-form {
